[tool.poetry]
name = "python-aws"
version = "0.1.0"
description = ""
authors = ["Mariam Vashakidze <vashakidzemariam27@gmail.com>"]
readme = "README.md"
packages = [{include = "python_aws"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
boto3 = "^1.26.113"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
